# pymulticloud

./: .gitignore  CMakeLists.txt  README  README.org  activate.sh  compile.sh  galerkin projection.nb  projection.py  read multicloud output.ipynb  tadmor_1d.py  tadmor_2d.py  tadmor_common.py  test_tadmor_2d.py
column/: ColumnCongDetr.m  ColumnStandard.m  G7.m  RCEr7.m  birthdeathexact2fort.m  columnplotStoch2.m  dplot.m  equilibriumdistribution2fort.m  gammabb.m  mf.m  mfsys.m  saveSRCE.m  setRc.m  srce_factory.py
doc/: Makefile  api.rst  conf.py  index.rst
examples/: runall.sh
examples/column/: bin2nc.py  deep_moist  input.nml  runall.sh  runcolumn.sh
examples/homog/: bin2nc.py  input.nml  run.sh
examples/python/: cmt diagnostic runs and transition rates.ipynb  plot.py  run_mc.py
examples/python_cmt/: plot.py  run_cmt.py
examples/python_cmtnonlin/: run.sh
fortran/: CMakeLists.txt  central_scheme_correct.f90  cmt_mod.f90  cmt_wrapper.f90  mc.f90  multicloud.py  multicloud_mod.f90  multicloud_newform_relaxndstoch.f90  multicloud_wrapper.f90  param_mod.f90  pymodule.mk  state_mod.f90
fortran/matlab/: plotfields3stoch.m
python/: cmt.py  column.py  read multicloud output.ipynb  read.py  run_two_mode_swe.py
src/: CMakeLists.txt  column_wrapper.f90  multicloud_mod.f90  multicloud_newform_relaxndstoch.f90  state_mod.f90  util.f90
stochmc/: cmt.py  column.py  io.py  spectral.py  swe2d.py
swe/: multicloud.py  projection.py  tadmor_2d.py  tadmor_common.py  timestepping.py  two_mode_swe.py
xt/: CMakeLists.txt  Makefile.mac  README  bin2nc.py  central_scheme_correct.f  central_scheme_correct.f90  cmt_mod.f90  column_wrapper.f90  duni.f  forcings.f90  load.py  multicloud_newform_relaxndstoch.f90  param_mod.f90  plot_gauge.py  runcolumn.sh  state_mod.f90  stochastic.f90  test_bd.f90  util.f90
xt/ext/: CMakeLists.txt
xt/ext/minpack/: CMakeLists.txt  hybrd1.f
xt/matlab/: plotAVG3stoch3.m  plotfields3MTAVG.m  plotfields3stoch2.m
(+21 files in other folders)
